# forge-commerce

./: .gitignore  Cargo.toml  README.md  start.sh  status.sh  stop.sh
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs
src/routes/: admin.rs  auth.rs  cart.rs  checkout.rs  listings.rs  messages.rs  mod.rs  products.rs
static/css/: style.css
templates/: admin_dashboard.html  admin_orders.html  admin_product_form.html  admin_products.html  base.html  cart.html  checkout.html  conversation.html  feed.html  index.html  listing_detail.html  listing_form.html  login.html  messages.html  product_detail.html  product_list.html  profile.html  register.html
tests/: integration.rs
